# pkg/api/manifest.go
@@ -4,7 +4,6 @@ import (
 	"github.com/bsonger/devflow/pkg/model"
 	"github.com/bsonger/devflow/pkg/service"
 	"github.com/gin-gonic/gin"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 	"net/http"
 )
 
@@ -28,13 +27,9 @@ func NewManifestHandler() *ManifestHandler {
 // @Param        data            body  model.Manifest    true "Manifest 数据（branch 必填）"
 // @Success      200  {object}  model.Manifest
 // @Failure      400  {object}  map[string]string
-// @Router       /api/v1/applications/{application_id}/manifests [post]
+// @Router       /api/v1/manifests [post]
 func (h *ManifestHandler) Create(c *gin.Context) {
 
-	appID, err := primitive.ObjectIDFromHex(c.Param("application_id"))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-	}
 	var m model.Manifest
 	if err := c.ShouldBindJSON(&m); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -46,10 +41,8 @@ func (h *ManifestHandler) Create(c *gin.Context) {
 		return
 	}
 
-	m.ApplicationID = appID
-
 	// 根据 Application 获取 gitRepo
-	application, err := ApplicationRouteApi.svc.Get(c.Request.Context(), appID)
+	application, err := ApplicationRouteApi.svc.Get(c.Request.Context(), m.ApplicationID)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "application is not found"})
 		return
@@ -58,17 +51,18 @@ func (h *ManifestHandler) Create(c *gin.Context) {
 	m.GitRepo = application.RepoURL
 
 	// 自动生成 Manifest 名称
-	m.Name = model.GenerateName("application")
+	m.Name = application.Name
+	m.Version = model.GenerateManifestVersion()
 
-	// 初始化 Steps
-	m.Steps = []model.Step{
-		{Name: "build_image", Status: "pending"},
-		{Name: "package_manifest", Status: "pending"},
-		{Name: "push_github", Status: "pending"},
-		{Name: "push_aliyun", Status: "pending"},
-	}
+	//// 初始化 Steps
+	//m.Steps = []model.Step{
+	//	{Name: "build_image", Status: "pending"},
+	//	{Name: "package_manifest", Status: "pending"},
+	//	{Name: "push_github", Status: "pending"},
+	//	{Name: "push_aliyun", Status: "pending"},
+	//}
 
-	m.Status = "running"
+	//m.Status = "running"
 
 	// 保存 Manifest
 	id, err := h.svc.CreateManifest(c.Request.Context(), &m)
